--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jenish-portfolio</title>
+    <title>Your Name - Portfolio</title>
 </head>
 <body>
-    
+
+    <header>
+        <h1>Your Name</h1>
+        <p>Web Developer</p>
+    </header>
+
+    <section>
+        <h2>About Me</h2>
+        <p>Welcome to my portfolio! I am a passionate web developer.</p>
+    </section>
+
+    <section>
+        <h2>Projects</h2>
+        <div>
+            <h3>Project 1</h3>
+            <p>Description of Project 1.</p>
+            <a href="#">View Project</a>
+        </div>
+
+        <div>
+            <h3>Project 2</h3>
+            <p>Description of Project 2.</p>
+            <a href="#">View Project</a>
+        </div>
+    </section>
+
+    <section>
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out to me. You can find me on <a href="https://github.com/your-username">GitHub</a> or <a href="https://linkedin.com/in/your-username">LinkedIn</a>.</p>
+    </section>
+
 </body>
 </html>
